@startuml

title 05. Sales orders

hide circle
skinparam linetype ortho

enum OrderStatus {
	draft
	confirmed
	awaiting_stock
	ready_to_ship
	partially_shipped
	shipped
	delivered
	completed
	canceled
	partially_returned
	returned
}

entity Order {
	* id: int
	--
	* number: string(255)
	* status: OrderStatus
	* currency: Currency
	* exchangeRateToBase: decimal(18,8)
	customerNameSnapshot: string(255)?
	customerPhoneSnapshot: string(255)?
	customerEmailSnapshot: string(255)?
	deliveryAddress: text?
	* totalAmount: decimal(14,4)
	* totalAmountBase: decimal(14,4)
	discountAmount: decimal(14,4)?
	discountAmountBase: decimal(14,4)?
	* paidAmountBase: decimal(14,4)
	* paymentStatus: PaymentStatusEnum
	paidAt: DateTimeImmutable?
	canceledAt: DateTimeImmutable?
	* createdAt: DateTimeImmutable
	* updatedAt: DateTimeImmutable
	* store: Store
	customer: Customer?
	createdBy: User?
	updatedBy: User?
	canceledBy: User?
}

entity OrderEntry {
	* id: int
	--
	* quantity: decimal(14,4)
	shippedQuantity: decimal(14,4)?
	returnedQuantity: decimal(14,4)?
	canceledQuantity: decimal(14,4)?
	* unitPrice: decimal(14,4)
	* unitPriceBase: decimal(14,4)
	discountAmount: decimal(14,4)?
	discountAmountBase: decimal(14,4)?
	discountPercent: decimal(7,4)?
	discountMode: none|rule|manual_override?
	discountRuleNameSnapshot: string(255)?
	* totalPrice: decimal(14,4)
	* totalPriceBase: decimal(14,4)
	* productNameSnapshot: string(255)
	* productCodeSnapshot: string(255)
	* unitCodeSnapshot: string(50)
	* unitNameSnapshot: string(255)
	* order: Order
	* product: Product
	warehouse: Warehouse?
	discountRule: ProductDiscountRule?
}

Customer |o--o{ Order : places
Order ||--o{ OrderEntry : has
Product ||--o{ OrderEntry : ordered as
Warehouse |o--o{ OrderEntry : ships from
ProductDiscountRule |o--o{ OrderEntry : discount source
Currency ||--o{ Order : order currency
PaymentStatusEnum ||--o{ Order : payment state
Order ||--o{ InventoryDocument : generates shipment/return docs
User |o--o{ Order : creates/updates/cancels

note right of Order
  Current project status:
  - Order and OrderEntry entities exist with the main fields from Database.puml.
  - Customer relation and customer snapshot copying exist.
  - Order CRUD exists: index/show/form with entry collection UI.
  - OrderManager exists and currently supports draft creation,
    total recalculation, confirmation and cancellation.
  - Payment recalculation, reservations and shipment/return posting
    are not implemented yet.

  Required behavior:
  - Order number is generated per store.
  - Currency and exchangeRateToBase are financial snapshots.
  - Totals are recalculated from entries, not typed manually.
  - Normal discounts come from configured product/category rules.
  - Manual discounts and below-cost discounted lines require
    order.discount.override.
  - Customer snapshot fields remain stable after customer edits.
  - Only draft orders are freely editable.
  - Business status transitions are controlled by services,
    not arbitrary form edits.
  - Multi-user comments and the rich activity timeline are added
    in 05.1_Order_Comments_And_History.
end note

note right of OrderStatus
  Recommended flow:
  draft -> confirmed -> awaiting_stock -> ready_to_ship
  -> partially_shipped -> shipped -> delivered -> completed.

  Meaning:
  - confirmed = accepted into work.
  - awaiting_stock = stock is insufficient or not reserved yet.
  - ready_to_ship = all shippable quantity is available.
  - partially_shipped/shipped are driven by posted shipment docs.
  - delivered means customer received the goods.
  - completed means no normal fulfillment work remains.
  - canceled stops an order before normal completion.
  - partially_returned/returned are post-shipment return states.
  - confirmed can be returned to draft while no later workflow
    consequences exist yet.
  - canceled rollback is intentionally deferred until status history
    exists; later it must restore the previous status, not always draft.
end note

note right of OrderEntry
  Required behavior:
  - Product name/code/unit and price are snapshots.
  - quantity > 0.
  - shippedQuantity, returnedQuantity and canceledQuantity are progress caches.
  - posted InventoryDocumentLine + StockMovement are the source of truth.
  - Entry can specify warehouse or stay backordered.
  - Entry stores discount rule/percent/mode snapshots.
  - OrderEntry never changes stock directly.
end note

note bottom
  Suggested implementation steps:

  1. Keep current draft CRUD and calculator as the order base.
  2. Add dedicated transition service:
     draft -> confirmed -> awaiting_stock/ready_to_ship,
     with explicit confirmed -> draft rollback.
  3. Freeze or explicitly guard post-confirm edits.
  4. Integrate payment recalculation after Payments stage.
  5. Apply ProductDiscountRule through OrderEntryDiscountService
     before OrderCalculator totals.
  6. Integrate reservation creation after Reservations stage.
  7. Integrate shipment/return status updates after InventoryDocuments
     and 08.1 progress synchronization stages.
  8. Continue with 05.1 for comments and order timeline.
  9. Add tests for:
     snapshots, totals, editable states, status transitions,
     backorders and cancellation rules.
end note

@enduml
